--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -107,7 +107,7 @@ a:hover {
 }
 
 header {
-    background: #444;
+    background: #33cc33;
     width: 100%;
     height: 76px;
     position: fixed;
