--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -12,7 +12,7 @@ My quest to create responsive web page using CSS only
 
 body {
     margin: 0;
-    background-color: #ccc;
+    background-color: #f3f8ec;
     color: #222;
     width: 100%;
     font-family: 'Open Sans', sans-serif;
@@ -31,8 +31,8 @@ body {
 .footer {
     display: inline-block;
     width: 100%;
-    color: #ccc;
-    background-color: #222;
+    color: #fff;
+    background-color: #72a538;
     padding-bottom: 70px;
 }
 
@@ -80,21 +80,26 @@ body {
 .title {
     position: absolute;
     left: 50%;
-    -webkit-transform: translate(-50%,-140%);
-        -ms-transform: translate(-50%,-140%);
-         -o-transform: translate(-50%,-140%);
-            transform: translate(-50%,-140%);
-    font-size: 10vw;
-    color: rgba(250,250,250,0.7);
+    -webkit-transform: translate(-50%,-50%);
+        -ms-transform: translate(-50%,-50%);
+         -o-transform: translate(-50%,-50%);
+            transform: translate(-50%,-50%);
+    top: 50%;
+    font-size: 5vw;
+    color: #fff /* rgba(250,250,250,0.7);*/
+}
+
+.label {
+    color: #72a538;
 }
 
 a {
-    color: #777;
+    color: #eee;
     text-decoration: none;
 }
  
 a:hover {
-    color: #eee;
+    color: #fff;
 }
  
 .bg-img {
@@ -102,12 +107,11 @@ a:hover {
     display: inline-block;
     vertical-align: middle;
     background-size: 100%;
-    background-position: 50% 50%;
     background-repeat: no-repeat;
 }
 
 header {
-    background: #33cc33;
+    background: #72a538;
     width: 100%;
     height: 76px;
     position: fixed;
@@ -129,7 +133,7 @@ header {
         -ms-transform: translateY(-50%);
          -o-transform: translateY(-50%);
             transform: translateY(-50%);
-    color: #ddd;
+    color: #fff;
     margin-left: 2%;
     float: left;
     -webkit-transition: all .15s ease-out;
