--- a/src/css/carousel.css
+++ b/src/css/carousel.css
@@ -1,16 +1,16 @@
 .carousel {
-	background-color: #777;
+	position: relative;
+	background-color: #FFFFFF;
 	width: 95%;
     max-width: 600px;
-    padding: 5px;
+    padding: 2%;
     overflow: hidden;
-    border: 1px solid #ccc;
-    border-radius: 3px;
     text-align: center;  
 }
 
 .carousel-list {
     white-space: nowrap;
+
     padding: 0;
     margin: 0;
     transition: transform .3s;
@@ -28,6 +28,10 @@
 .carousel-list img {
     width: 100%; 
 	z-index: 0;
+}
+
+input {
+	display: none;
 }
 
 input:nth-child(1):checked ~ ul {
@@ -52,8 +56,7 @@ input:nth-child(5):checked ~ ul {
 
 .carousel-list li {
     opacity: 0;
-    transition: all .8s;
-    transform: scale(.1);
+    transition: all 1.5s;
 }
 
 input:nth-child(1):checked ~ ul li:nth-child(1),
@@ -103,4 +106,26 @@ input:nth-child(5):checked ~ ul li:nth-child(5) {
 	border: none;
 	border-radius: 3px;
 	color: #ffffff;
+}
+
+#arrow-left {
+	position: absolute;
+	top: 50%;
+	left: 2%;
+	height: 14%;
+	-webkit-transform: translate(50%,-50%);
+        -ms-transform: translate(50%,-50%);
+         -o-transform: translate(50%,-50%);
+            transform: translate(50%,-50%);
+}
+
+#arrow-right {
+	position: absolute;
+	top: 50%;
+	right: 7%;
+	height: 14%;
+	-webkit-transform: translate(50%,-50%);
+        -ms-transform: translate(50%,-50%);
+         -o-transform: translate(50%,-50%);
+            transform: translate(50%,-50%);
 }
