--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -26,6 +26,10 @@ body {
 
 .container {
     padding-top: 70px;
+     -webkit-transform: translateZ(0);
+             transform: translateZ(0);
+    -webkit-transition: -webkit-transform 0.6s ease-in-out;
+                    transition: transform 0.6s ease-in-out;
 }
 
 .footer {
@@ -80,11 +84,11 @@ body {
 .title {
     position: absolute;
     left: 50%;
-    -webkit-transform: translate(-50%,-50%);
-        -ms-transform: translate(-50%,-50%);
-         -o-transform: translate(-50%,-50%);
-            transform: translate(-50%,-50%);
-    top: 50%;
+    -webkit-transform: translate(-50%,0%);
+        -ms-transform: translate(-50%,0%);
+         -o-transform: translate(-50%,0%);
+            transform: translate(-50%,0%);
+    top: 28.1vw;
     font-size: 5vw;
     color: #fff /* rgba(250,250,250,0.7);*/
 }
@@ -139,6 +143,24 @@ header {
     -webkit-transition: all .15s ease-out;
          -o-transition: all .15s ease-out;
             transition: all .15s ease-out;
+}
+
+#arrow{
+    display: block;
+    position: absolute;
+    top: 38vw;
+    left: 50%;
+    height: 10vw;
+    width: 15vw;
+    -webkit-transform: translateX(-50%);
+        -ms-transform: translateX(-50%);
+         -o-transform: translateX(-50%);
+            transform: translateX(-50%);
+}
+
+#arrow-a:target ~ #home .container {
+    -webkit-transform: translateY(-1000px);
+            transform: translateY(-1000px);
 }
  
 nav { 
@@ -273,6 +295,10 @@ header li {
     }
 
     #foot-img {
+        display: none;
+    }
+
+    #arrow {
         display: none;
     }
 
