--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -200,6 +200,32 @@ header li {
     color: #2262AD;
 }
 
+.images {
+    position:relative;
+}
+
+#social-media {
+    position: absolute;
+    top: 76%;
+    right: 6%;
+    height: 12%;
+    width: 13%;
+}
+
+#social-media1 {
+    position: absolute;
+    top: 61%;
+    right: 6%;
+    height: 12%;
+    width: 13%;
+}
+
+
+#dp {
+    
+}
+
+
 @media only screen and (max-width : 640px) {
  
     header {
@@ -319,14 +345,3 @@ header li {
 
 }
 
-.images {
-    position:relative;
-}
-
-#social-media {
-    position: absolute;
-    top: 76%;
-    right: 6%;
-    height: 12%;
-    width: 13%;
-}
