Load Team data from JSON, team.html optimized for mobile

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -362,6 +362,8 @@ header li {
     .images  {
         display: inline-block;
         width: 75%;
+        -webkit-filter: grayscale(0);
+                filter: grayscale(0);  
     }
 
     .gallery img {
